--- a/application/index/view/index/Hello.html
+++ b/application/index/view/index/Hello.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>hello {$name}</title>
+<title>hello</title>
 </head>
 <body>
-    hello, {$name}!
+    <h1>世界 你好!</h1>
 </body>
 </html>
